Testing the new Kogito Tooling Full Downstream Build

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.html
@@ -15,7 +15,7 @@
   -->
 
 <div>
-    <h3 data-i18n-key="Title"></h3>
+    <h3>Testing the new Kogito Tooling Full Downstream Build</h3>
     <div data-field="data-type-button" class="data-type-button hidden">
         <div class="expand-collapse">
             <a data-field="expand-all" href="#" data-i18n-key="ExpandAll"></a>
