--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
@@ -16,33 +16,34 @@
 
 <div data-field="container" class="container">
     <div class="row">
-        <p style="font-weight: bold;">Task state type</p>
+        <p data-field="taskStateType" style="font-weight: bold;"></p>
         <form>
-            <div>
-                <label><input type="radio" data-field="notStartedInput" name="optradio" checked>Not started (Ready or reserved)</label>
+            <div class="radio">
+                <input type="radio" data-field="notStartedInput" style="margin: 4px 0 0" name="optradio" checked>
+                <label data-field="notStarted"></label>
             </div>
-            <div>
-                <label><input type="radio" data-field="notCompletedInput" name="optradio">Not completed (In progress)</label>
+            <div class="radio">
+                <input type="radio" data-field="notCompletedInput" style="margin: 4px 0 0" name="optradio">
+                <label data-field="notCompleted"></label>
             </div>
         </form>
     </div>
     <div class="row" style="width: 200px;">
-        <p style="font-weight: bold;">Task expiration definition
-            <a data-field="notificationPopover" id="notificationPopover" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-html="true" class="popover-pf-info" data-content="This time definition determines when notification will occur" data-placement="top">
-                <span class="glyphicon glyphicon-info-sign"></span>
-            </a>
-        </p>
+        <p data-field="taskExpirationDefinition" style="font-weight: bold; display:inline-block"></p>
+        <a data-field="notificationPopover" id="notificationPopover" tabindex="0" role="button" data-toggle="popover" data-trigger="hover" data-html="true" class="popover-pf-info" data-placement="top">
+            <span class="glyphicon glyphicon-info-sign"></span>
+        </a>
         <div data-field="taskExpiration" id="taskExpiration"></div>
     </div>
     <div data-field="timeperiodDiv">
         <div class="row">
-            <p style="margin-top: 5px; font-weight: bold;">Notify</p>
+            <p data-field="notify" style="margin-top: 5px; font-weight: bold;"></p>
             <div data-field="periodBox" style="width: 240px;"></div>
         </div>
     </div>
     <div data-field="datetimeDiv" style="display:none; margin-bottom: 10px;">
         <div class="row">
-            <p style="font-weight: bold; margin-top: 10px;">Notify after task expiration</p>
+            <p data-field="notifyAfter" style="font-weight: bold; margin-top: 10px;"></p>
             <div class="col-sm-2" style="margin-left: -20px;">
                 <div data-field="dateTimePicker"></div>
             </div>
@@ -55,21 +56,23 @@
         <div class="row">
             <div class="form-group">
                 <div class="col-sm-2" style="margin-left: -20px;">
-                    <p style="font-weight: bold;">Notification repeat</p>
+                    <p data-field="notificationRepeat" style="font-weight: bold;"></p>
                     <div data-field="repeatNotification"></div>
                 </div>
                 <div class="col-sm-3">
                     <div class="row" data-field="repeatNotificationPanelDiv" style="display:none;">
                         <div data-field="notifyEveryPanelDiv">
-                            <p style="font-weight: bold;">Notify every</p>
+                            <p data-field="notifyEvery" style="font-weight: bold;"></p>
                             <div data-field="repeatBox" id="repeatBox"></div>
                         </div>
-                        <p style="font-weight: bold;">Until</p>
+                        <p data-field="until" style="font-weight: bold;"></p>
                         <div class="radio">
-                            <label><input data-field="taskStateChanges" type="radio" name="optradio" checked>Task state changes</label>
+                            <input data-field="taskStateChanges" style="margin: 4px 0 0" type="radio" name="optradio" checked>
+                            <label data-field="taskStateChangesLabel"></label>
                         </div>
                         <div class="radio">
-                            <label><input data-field="repeatCountReaches" type="radio" name="optradio">Repeat count reaches</label>
+                            <input data-field="repeatCountReaches" style="margin: 4px 0 0" type="radio" name="optradio">
+                            <label data-field="repeatCountReachesLabel"></label>
                         </div>
                         <div class="form-control" name="period" min="0" type="number" data-field="repeatCount" style="width: 80px; margin-left: 20px;" disabled></div>
                     </div>
@@ -78,8 +81,11 @@
         </div>
     </div>
     <div class="row" data-field="expressionDiv" style="display:none;">
-        <textarea data-field="expressionTextArea" placeholder="Example of basic expression notation for an interval: P2y10M14dT20h13m" class="form-control" rows="5" style="width:500px; height: 50px; resize: none; margin-top: 20px;"></textarea>
-        <a href="#"><span class="glyphicon glyphicon-question-sign" style="color: grey;"></span></a><span>For syntax requirements for ISO 8601 expressions, see https://www.iso.org/</span>
+        <textarea data-field="expressionTextArea" class="form-control" rows="5" style="width:500px; height: 50px; resize: none; margin-top: 20px;"></textarea>
+        <p>
+            <i class="fa fa-question-circle" style="color: grey;"></i>
+            <span data-field="syntaxRequirement"></span>
+        </p>
     </div>
     <div class="row" style="width: 500px;">
         <hr>
