--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
@@ -122,6 +122,7 @@
     <div class="row">
         <p data-field="to-emails" style="margin: 10px 0 0 0;"></p>
         <input data-field="emails" type="text" class="form-control" max="99" style="width:500px;">
+        <p data-field="incorrectEmail" style="margin: 0; color: red"></p>
     </div>
     <div class="row">
         <input data-field="subject" type="text" class="form-control" max="99" style="width:500px; margin-top: 20px;">
