JBPM-9290 - Stunner - make body field of Notification resizable

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/notificationsEditor/widget/NotificationEditorWidgetViewImpl.html
@@ -128,7 +128,7 @@
         <input data-field="subject" type="text" class="form-control" max="99" style="width:500px; margin-top: 20px;">
     </div>
     <div class="row">
-        <textarea data-field="body" class="form-control" rows="5" id="comment" style="width:500px; resize: none;   margin-top: 20px;"></textarea>
+        <textarea data-field="body" class="form-control" rows="5" id="comment" style="width:500px; resize: vertical; margin-top: 20px;"></textarea>
     </div>
     <div class="row" data-field="errorDivPanel" style="width: 500px; margin-top:10px; color:red;">
     </div>
