- DMN Decision Navigator Dock      - Decision Navigator Tree      - Decision Components widget

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/docks/navigator/tree/DecisionNavigatorTreeView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/docks/navigator/tree/DecisionNavigatorTreeView.html
@@ -19,8 +19,13 @@
 </div>
 
 <li data-field="item">
-    <div data-field="text">
+    <div>
         <span data-field="icon"></span>
+        <span data-field="text-content"></span>
+        <input data-field="input-text" type="text"/>
     </div>
+    <i data-field="save" class="fa fa-check"></i>
+    <i data-field="edit" class="fa fa-pencil"></i>
+    <i data-field="remove" class="fa fa-trash"></i>
     <ul data-field="sub-items"></ul>
 </li>
