BXMSDOC-6530: Revise wording in DMN Guided Tour text.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/java/org/kie/workbench/common/dmn/webapp/kogito/common/client/tour/tutorial/DMNTutorialView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-webapp-kogito-common/src/main/java/org/kie/workbench/common/dmn/webapp/kogito/common/client/tour/tutorial/DMNTutorialView.html
@@ -20,7 +20,7 @@
         <div class="pf-c-content">
             <h3 class="pf-c-title pf-m-xl">Interact with the canvas</h3>
             <p data-pf-content="true">
-                Let's create a decision node by dragging the rectangle into the canvas.
+                Let's create a decision node by dragging the rectangle onto the canvas.
             </p>
         </div>
     </div>
@@ -30,13 +30,13 @@
         <div class="pf-c-content">
             <h3 class="pf-c-title pf-m-xl">Rename our decision node</h3>
             <p data-pf-content="true">
-                The decision nodes are the most important kind of node on our DMN model.
+                The decision nodes are the most important kind of node in our DMN model.
                 Their output value depends on their decision logic and input data (input
                 nodes or the output value from other decisions).
             </p>
             <p data-pf-content="true">
-                Now, let's double-click on our recently created decision node to rename
-                it to <b>Can drive?</b> (yes, with the exclamation mark) ;-)
+                Now, let's double-click our recently created decision node to rename
+                it to <b>Can drive?</b> (yes, with the question mark) ;-)
             </p>
         </div>
     </div>
@@ -44,11 +44,11 @@
     <!-- Step 2 -->
     <div class="step">
         <div class="pf-c-content">
-            <h3 class="pf-c-title pf-m-xl">Create an input data</h3>
+            <h3 class="pf-c-title pf-m-xl">Create an input data node</h3>
             <p data-pf-content="true">Great stuff!</p>
             <p data-pf-content="true">
-                Now, let's create an input data node by dragging the rounded corner
-                rectangle into the canvas.
+                Now, let's create an input data node by dragging the rounded-corner
+                rectangle onto the canvas.
             </p>
         </div>
     </div>
@@ -62,7 +62,7 @@
                 decisions.
             </p>
             <p data-pf-content="true">
-                Now, rename our input to <b>Age</b>. Remember, you can double-click on
+                Now, rename our input to <b>Age</b>. Remember, you can double-click
                 our node to rename.
             </p>
         </div>
@@ -71,11 +71,11 @@
     <!-- Step 4 -->
     <div class="step">
         <div class="pf-c-content">
-            <h3 class="pf-c-title pf-m-xl">Edit nodes properties</h3>
+            <h3 class="pf-c-title pf-m-xl">Edit node properties</h3>
             <p data-pf-content="true">Excellent!</p>
             <p data-pf-content="true">
-                You can also define other properties on our nodes. Toggle the properties
-                panel by clicking on the pencil icon.
+                You can also define other properties of our nodes. Toggle the properties
+                panel by clicking the pencil icon.
             </p>
         </div>
     </div>
@@ -86,14 +86,14 @@
             <h3 class="pf-c-title pf-m-xl">Editor components</h3>
             <p data-pf-content="true">
                 The properties panel shows all properties related to the currently
-                selected node. Thus, you're able to update our input data (to set its
-                type to <i>number</i> for example). But don't mind about it right now.
+                selected node. You can update our input data (to set its
+                type to <i>number</i>, for example), but don't worry about that right now.
             </p>
             <p data-pf-content="true">
                 Let's check another powerful and essential tool, the boxed expression
                 editor, which is responsible for the defining decision logic for
                 decision nodes. Open it by selecting our decision node
-                <b>Can drive?</b>, and then clicking on the pencil icon.
+                <b>Can drive?</b>, and then clicking the pencil icon.
             </p>
         </div>
     </div>
@@ -104,11 +104,11 @@
             <h3 class="pf-c-title pf-m-xl">Boxed expression editor</h3>
             <p data-pf-content="true">
                 Here's where we define the decision logic for our decision node. This
-                logic will determine the output value for it.
+                logic will determine the output value for the decision.
             </p>
             <p data-pf-content="true">
                 Right now, you don't have any boxed expression defined for our node, so
-                click on <b>Select expression</b> to select one of the available boxed
+                click <b>Select expression</b> to select one of the available boxed
                 expressions.
             </p>
         </div>
@@ -124,7 +124,7 @@
                     learn-dmn-in-15-minutes.com/learn/decision-logic
                 </a>.
             </p>
-            <p data-pf-content="true">Now, let's go back to our canvas by clicking on this link!</p>
+            <p data-pf-content="true">Now, let's go back to our canvas by clicking this link!</p>
         </div>
     </div>
 </div>
