- Solving overlapping issue of palette with session header container
 - Solving drools-wb-webapp issue with session header container setup

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/drd/DRDNameChangerView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/drd/DRDNameChangerView.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div id="drd-name-changer" style="display: none">
+<div id="drd-name-changer">
     <div class="return-to-drg-link">
         <i class="fa fa-angle-double-left"></i><a href="#" data-field="returnToDRG" data-i18n-key="ReturnToDRGMessage"></a>
     </div>
