JBPM-8737 - Stunner - Process with empty Class Name Import doesn't build
This adds empty/duplicate import validations.

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/imports/editors/defaultimport/DefaultImportsEditorViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/imports/editors/defaultimport/DefaultImportsEditorViewImpl.html
@@ -45,7 +45,7 @@
                     </thead>
                     <tbody data-field="importComponents">
                         <tr data-field="importItem" hidden>
-                            <td>
+                            <td data-field="classNameColumn">
                                 <select class="form-control" data-field="defaultClassNames"/>
                                 <input class="form-control" data-field="customClassName" type="text"/>
                             </td>
