--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/imports/editors/wsdlimport/WSDLImportsEditorViewImpl.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/imports/editors/wsdlimport/WSDLImportsEditorViewImpl.html
@@ -14,7 +14,7 @@
   ~ limitations under the License.
   -->
 
-<div data-field="widget">
+<div>
     <div style="margin-top: 10px; margin-bottom: 10px">
         <table style="width: 100%">
             <tr style="vertical-align: middle">
@@ -46,10 +46,10 @@
                     </thead>
                     <tbody data-field="importComponents">
                         <tr data-field="importItem" hidden>
-                            <td>
+                            <td data-field="locationColumn">
                                 <input class="form-control" data-field="location" type="text"/>
                             </td>
-                            <td>
+                            <td data-field="namespaceColumn">
                                 <input class="form-control" data-field="namespace" type="text"/>
                             </td>
                             <td style="width: 48px">
