--- a/kie-wb-common-react/boxed-expression-editor/src/index.html
+++ b/kie-wb-common-react/boxed-expression-editor/src/index.html
@@ -17,18 +17,30 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head>
-  <meta charset="utf-8">
-  <title>Boxed Expression Editor</title>
-  <meta id="appName" name="application-name" content="Boxed Expression Editor">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
-  <base href="/">
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Boxed Expression Editor</title>
+    <meta id="appName" name="application-name" content="Boxed Expression Editor">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="/images/favicon.png">
+    <base href="/">
+    <style type="text/css">
+      .align-center {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        display: -webkit-box;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: -webkit-flex;
+      }
+    </style>
+  </head>
 
-<body>
-  <noscript>Enabling JavaScript is required to run this app.</noscript>
-  <div id="root"></div>
-</body>
+  <body>
+    <noscript>Enabling JavaScript is required to run this app.</noscript>
+    <div id="root" class="align-center"></div>
+  </body>
 
 </html>
