--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/decisionservice/parameters/DecisionServiceParametersListWidget.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/widgets/decisionservice/parameters/DecisionServiceParametersListWidget.html
@@ -14,5 +14,5 @@
   ~ limitations under the License.
   -->
 
-<div id="widget-container">
+<div id="decision-service-parameters-widget-container">
 </div>
