--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeSelectView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeSelectView.html
@@ -15,14 +15,14 @@
   -->
 <div>
     <div data-field="type-text"></div>
-    <select data-field="type-select" data-container="body" class="selectpicker">
-        <optgroup data-field="type-select-optgroup">
-            <option data-field="type-select-option"></option>
-        </optgroup>
+    <select data-field="type-select" data-live-search="true" data-container="body" class="selectpicker">
         <optgroup data-field="type-select-structure-optgroup">
             <option class="option-structure fa fa-object-group" value="Structure">
                 Structure
             </option>
+        </optgroup>
+        <optgroup data-field="type-select-optgroup">
+            <option data-field="type-select-option"></option>
         </optgroup>
     </select>
 </div>
