KOGITO-3909: Add OuiaAttributes to Data Type entry
For easier testing of KOGITO-3909 we add some OuiaAttributes into Dmn Data Types list
For more details see: https://issues.redhat.com/browse/KOGITO-3909

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/DataTypeListView.html
@@ -24,7 +24,7 @@
         </div>
         <div class="search-bar-container" data-field="search-bar-container"></div>
         <div class="action-button">
-            <button data-field="add-button" class="btn btn-default">
+            <button data-field="add-button" class="btn btn-default" data-ouia-component-type="add-data-type-button" data-ouia-component-id="new">
                 <span data-i18n-key="NewDataType"></span>
             </button>
             <button data-field="import-data-object-button" class="btn btn-default">
@@ -40,7 +40,7 @@
             <h1 data-i18n-key="NoCustomDataTitle"></h1>
             <p data-i18n-key="NoCustomData1"></p>
             <p data-i18n-key="NoCustomData2"></p>
-            <button data-field="add-button-placeholder" class="btn btn-primary">
+            <button data-field="add-button-placeholder" class="btn btn-primary" data-ouia-component-type="add-data-type-button" data-ouia-component-id="first">
                 <i class="fa fa-plus-circle"></i>
                 <span data-i18n-key="AddACustomDataType"></span>
             </button>
