KOGITO-4155: BPMN Editor - Cannot properly edit Expressions in the Data Assignments

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/assignmentsEditor/ActivityDataIOEditorWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/java/org/kie/workbench/common/stunner/bpmn/client/forms/fields/assignmentsEditor/ActivityDataIOEditorWidget.html
@@ -51,24 +51,24 @@
                         </thead>
                         <tbody id="assignments">
                         <tr id="assignment">
-                            <td>
-                                <input type="text" class="form-control" style="width: 11em;" data-field="name"/>
+                            <td style="width:200px">
+                                <input type="text" class="form-control" style="width: 100%" data-field="name"/>
                             </td>
-                            <td>
-                                <select data-field="dataType" class="form-control" style="width: 11em;">
+                            <td style="width:380px">
+                                <select data-field="dataType" class="form-control" style="width: 100%;">
                                     <option value="Integer">Integer</option>
                                     <option value="String">String</option>
                                 </select>
-                                <input type="text" class="form-control" style="width: 11em;" data-field="customDataType"/>
+                                <input type="text" class="form-control" style="width: 100%;" data-field="customDataType"/>
                             </td>
                             <td>
-                                <select data-field="processVar" class="form-control" style="width: 11em;">
+                                <select data-field="processVar" class="form-control" style="width: 100%;">
                                     <option value="Var1">Var1</option>
                                     <option value="Var2">Var2</option>
                                 </select>
-                                <input type="text" class="form-control" style="width: 11em;" data-field="expression"/>
+                                <input type="text" class="form-control" style="width: 100%;" data-field="expression"/>
                             </td>
-                            <td>
+                            <td style="width:30px">
                                 <button type="button" class="center-block btn btn-danger" data-field="deleteButton"></button>
                             </td>
                         </tr>
