- Update: tooltip link from 'View or edit this data type' to 'View this data type' - Fix: Tooltip must show a different message for external data types - Update: rename tooltip 'data-field' from 'tooltip' to 'data-type-details-tooltip' - Fix: Now message for custom data types does not mention fields.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.html
@@ -15,14 +15,14 @@
   -->
 
 <div>
-    <div data-field="tooltip" class="structure-data-types-tooltip">
+    <div data-field="data-type-details-tooltip" class="structure-data-types-tooltip">
         <button data-field="close" type="button" class="close" data-dismiss="modal">×</button>
         <h3 data-field="data-type-name"></h3><span class="kie-data-type-type" data-i18n-key="Structure"></span>
         <p data-field="description"></p>
         <ul data-field="data-type-fields">
             <li data-field="data-type-field"></li>
         </ul>
-        <a data-field="view-data-type-link" href="#" data-i18n-key="ViewOrEditDataType"></a>
+        <a data-field="view-data-type-link" href="#" data-i18n-key="ViewDataType"></a>
     </div>
     <span class="kie-data-type-type" data-field="data-type-field-type"></span>
 </div>
