--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.html
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/java/org/kie/workbench/common/dmn/client/editors/types/listview/tooltip/StructureTypesTooltipView.html
@@ -13,14 +13,16 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
+
 <div>
-    <div data-field="type-text"></div>
-    <select data-field="type-select" data-live-search="true" data-container="body" class="selectpicker">
-        <optgroup data-field="type-select-structure-optgroup">
-            <option class="option-structure fa fa-object-group" value="Structure" data-i18n-key="Structure"></option>
-        </optgroup>
-        <optgroup data-field="type-select-optgroup">
-            <option data-field="type-select-option"></option>
-        </optgroup>
-    </select>
+    <div data-field="data-type-details-tooltip" class="structure-data-types-tooltip">
+        <button data-field="close" type="button" class="close" data-dismiss="modal">×</button>
+        <h3 data-field="data-type-name"></h3><span class="kie-data-type-type" data-i18n-key="Structure"></span>
+        <p data-field="description"></p>
+        <ul data-field="data-type-fields">
+            <li data-field="data-type-field"></li>
+        </ul>
+        <a data-field="view-data-type-link" href="#" data-i18n-key="ViewDataType"></a>
+    </div>
+    <span class="kie-data-type-type" data-field="data-type-field-type"></span>
 </div>
