AF-2833 : Conscious language initiative kie-wb-common and kie-wb-playground
 * Changed restrictive terms with low impact

--- a/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/java/org/guvnor/ala/ui/openshift/client/provider/OpenShiftProviderConfigView.html
+++ b/kie-wb-common-ala/kie-wb-common-ala-openshift/kie-wb-common-ala-openshift-ui/kie-wb-common-ala-openshift-ui-client/src/main/java/org/guvnor/ala/ui/openshift/client/provider/OpenShiftProviderConfigView.html
@@ -15,12 +15,12 @@
         </div>
     </div>
 
-    <div class="form-group" data-field="master-url-form">
+    <div class="form-group" data-field="main-url-form">
         <div class="uf-form-label col-md-3 col-sm-3">
-            <label class="control-label" data-field="master-url-label" data-i18n-key="MasterURL">Master URL</label>
+            <label class="control-label" data-field="main-url-label" data-i18n-key="MainURL">Main URL</label>
         </div>
         <div class="col-sm-9 col-md-9">
-            <input type="text" data-field="master-url" class="form-control">
+            <input type="text" data-field="main-url" class="form-control">
         </div>
     </div>
 
