KOGITO-6036: Use html <input type='color'> picker
For more details see:
- https://issues.redhat.com/browse/KOGITO-6036

--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-forms/kie-wb-common-stunner-forms-client/src/main/java/org/kie/workbench/common/stunner/forms/client/fields/colorpicker/ColorPickerWidget.html
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-forms/kie-wb-common-stunner-forms-client/src/main/java/org/kie/workbench/common/stunner/forms/client/fields/colorpicker/ColorPickerWidget.html
@@ -14,11 +14,6 @@
   ~ limitations under the License.
   -->
 
-<div class="input-group">
-    <span class="input-group-btn">
-        <button class="btn btn-default" type="button" id="colorButton">
-            <i class="fa fa-edit"></i>
-        </button>
-    </span>
-    <input type="text" class="form-control" id="colorTextBox" readOnly>
+<div class="form-group">
+    <input type="color" class="form-control" id="colorTextBox">
 </div>
